; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_on_receive_reset.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_on_receive_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.st_h2o_http3client_req_t* }
%struct.st_h2o_http3client_req_t = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i64, %struct.TYPE_7__*, %struct.TYPE_6__* }
%struct.TYPE_7__ = type { i64 }
%struct.TYPE_6__ = type { i64 }

@H2O_HTTP3_ERROR_REQUEST_CANCELLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*, i32)* @on_receive_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_receive_reset(%struct.TYPE_9__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_h2o_http3client_req_t*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 0
  %8 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %7, align 8
  store %struct.st_h2o_http3client_req_t* %8, %struct.st_h2o_http3client_req_t** %5, align 8
  %9 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %5, align 8
  %10 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 2
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %5, align 8
  %16 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 1
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %14, %20
  %22 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %5, align 8
  %23 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp eq i64 %21, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  %29 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %5, align 8
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @handle_input_error(%struct.st_h2o_http3client_req_t* %29, i32 %30)
  %32 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %5, align 8
  %33 = load i32, i32* @H2O_HTTP3_ERROR_REQUEST_CANCELLED, align 4
  %34 = call i32 @close_stream(%struct.st_h2o_http3client_req_t* %32, i32 %33)
  %35 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %5, align 8
  %36 = call i32 @destroy_request(%struct.st_h2o_http3client_req_t* %35)
  ret i32 0
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @handle_input_error(%struct.st_h2o_http3client_req_t*, i32) #1

declare dso_local i32 @close_stream(%struct.st_h2o_http3client_req_t*, i32) #1

declare dso_local i32 @destroy_request(%struct.st_h2o_http3client_req_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
